--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Deborah Care - Salon de Beauté</title>
+  <title>DeboCare - Salon de Beauté</title>
   <style>
     body {
       margin: 0;
